# mdh-cuda-stencil-kernels

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: architecture.md  reproduce.md  reservoir_history.md  speedup_analysis.md
framework/include/: cuda_generator.hpp
kernels/matmul/: README.md
kernels/matmul/spec/: matmul.cpp
kernels/matmul/test/: test_cpu_vs_gpu.cu  test_matmul.cu
kernels/poisson/: README.md
kernels/poisson/spec/: poisson.cpp
kernels/poisson/test/: test_poisson.cu  test_poisson_converge.cu
kernels/reservoir/: README.md
kernels/reservoir/reference/: Source.cpp
kernels/reservoir/spec/: reservoir.cpp
kernels/reservoir/test/: test_reservoir.cu
results/: progression.csv  speedup_table.md
